Movido variables al entorno

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 DISCORD_TOKEN=https://discord.com/developers/applications
 DISCORD_PREFIX=!
 LAVALINK_PASSWORD=youshallnotpass
+LAVALINK_HOSTNAME="localhost:2333"
+DEFAULT_ENABLED_GUIDS=1214648265836990524,1232023091832557618
